--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@mate-academy/stylelint-config": "^0.0.11",
     "@parcel/transformer-sass": "2.10.2",
     "backstopjs": "^6.2.2",
+    "cssnano": "^6.1.2",
     "eslint": "^8.52.0",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
     "parcel": "2.10.2",
+    "postcss": "^8.4.38",
     "stylelint": "^15.11.0"
   },
   "browserslist": [
@@ -41,5 +43,7 @@
       "bem": false
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "swiper": "^11.1.0"
+  }
 }
